v3.4
-----
+ Added Japanese translation courtesy of planicrand
: Fixed a few bugs with coupon formatting

v3.3
-----
+ "Packs" will now be marked as owned if you own all games in the pack
: Fixed a bug where account total not calculating if purchases made in euro or rubles
: Fixed a bug where storefront items with no description break carousel
+ Enhanced Steam cache will now clear when logging out of your Steam account

v3.2
-----
+ Added ability to filter price history to user selected stores
+ Added "Credits" section to the options page, giving credit to contributors
+ Added "Reset all options to Default Settings" on "About" page in options
: Profile links now work correctly with the new Steam profile beta
+ Added German translation, courtesy of Timmaeh Elbert

v3.1.1
-----
: Fixed a bug that disabled saving on the options page
+ Added a Russian translation (Thanks Vyacheslav Konchits)

v3.1
-----
: General code cleanup: less places for bugs to sneak in.
: Fixed a bug where "Add to Cart" button on wishlists was a recommendation form.
+ Added highlighting for gift in inventory, guest passes, friends have in wishlist.
+ Added tags feature (owned, wishlisted, coupons, gift, guest pass, friends-want).
+ Added "Empty Wishlist" button (May be slow on large wishlists).
+ Added new feature - storefront carousel app descriptions.
+ Re-wrote price tab which now shows current best and historical best deals.  
+ Added price tab to game bundles.
+ Added links to SteamDB on store pages, app hubs, and official groups.
: Changed from page scraping to Valve Storefront API (faster!)

v3.0
-----
: Fixed wishlist detection for non-English users
+ Coupon discounts now stack where applicable (most currencies)
+ Options page changed from dropdown boxes to check boxes
+ Added a link for AchievementStats.com
+ Some AJAX loaded content now correctly highlights (still not in search yet)

v2.9
-----
: Fixed a bug with coupon values calculating wrong for non-US currencies

v2.8
-----